teste_konga/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: konga
    meta.helm.sh/release-namespace: kong
  creationTimestamp: "2022-12-20T17:14:13Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: konga
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: konga
    helm.sh/chart: konga-1.0.3
  name: konga
  namespace: kong
  resourceVersion: "16274611"
  uid: 0b19c8c9-17e8-4cb0-a418-0423daa8b90b
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: konga
      app.kubernetes.io/name: konga
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: konga
        app.kubernetes.io/name: konga
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: konga-config
        image: pantsel/konga:0.14.9
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: konga
        ports:
        - containerPort: 1337
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: env
        operator: Equal
        value: prd
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-12-20T17:14:23Z"
    lastUpdateTime: "2022-12-20T17:14:23Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-12-20T17:14:13Z"
    lastUpdateTime: "2022-12-20T17:14:23Z"
    message: ReplicaSet "konga-85cbc7c4fb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
